--- a/index.html
+++ b/index.html
@@ -1,33 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>Vanessa Liu - IT graduate</title>
-	<meta name="author" content="Vanessa Liu">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <title>Vanessa Liu - IT graduate</title>
+  <meta name="author" content="Vanessa Liu">
 
-	<link rel="stylesheet" type="text/css"  href="css/style.css">
+  <link rel="stylesheet" type="text/css"  href="css/style.css">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/8cb9359eb1.js"></script>
 </head>
 
 
 <body id="page-top">
-
+<!---------------- Header ---------------->
 <header>
-	<div class="intro">
-		<div class="container">
-			<div class="row">
-				<div class="intro-text">
-				  <h1>Hello, I'm <span class="name">Vanessa Liu</span></h1>
+  <div class="intro">
+    <div class="container">
+      <div class="row">
+        <div class="intro-text">
+          <h1>Hello, I'm <span class="name">Vanessa Liu</span></h1>
           <p>IT graduate</p>
-          <a href="#" class="btn btn-default btn-lg">Learn More</a>
-				</div>
-			</div>
-		</div>
-	</div>
+          <!-- Todo:add page-scroll -->
+          <a class="page-scroll" href="#about" class="btn btn-default btn-lg">Learn More</a></div>
+      </div>
+    </div>
+  </div>
 </header>
+
+<!---------------- Navigation ---------------->
+<div id="nav">
+  <nav class="navbar navbar-custom">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
+        <!-- Todo:add page-scroll -->
+        <a class="navbar-brand" href="#">Vanessa Liu</a> </div>
+      <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+        <ul class="nav navbar-nav">
+          <li class="hidden"> <a href="#page-top"></a> </li>
+          <li> <a class="page-scroll" href="#about">About</a> </li>
+          <li> <a class="page-scroll" href="#skills">Skills</a> </li>
+          <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
+          <li> <a class="page-scroll" href="#resume">Resume</a> </li>
+          <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<!---------------- About ---------------->
+<div id="about">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>About Me</h2>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <img src="img/about.jpg">
+      </div>
+      <div class="col-md-8 col-md-offset-2">
+        <div class="about-text">
+          <p>I am an open-minded, easygoing and resourceful IT graduate, and I am interested in improving myself in developing website or software. I would like to use my communication, problem solving and teamwork skills to benefit organizations. </p>
+          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
