Add experience section (education)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
-          <li> <a class="page-scroll" href="#experience">Experience</a> </li>
+          <li> <a class="page-scroll" href="#education">Experience</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
         </ul>
       </div>
@@ -118,7 +118,74 @@
   </div>
 </div>
 
+<!---------------- Experience ---------------->
+<div id="education" class="text-center">
+  <div class="container">
+    <div class="section-title center">
+      <h2>Education</h2>
+    </div> 
+    <div class="row">
+      <div class="col-lg-12">
+        <ul class="timeline">
+          <li>
+            <div class="timeline-image">
+              <h4> 03/2019 <br>
+                - <br>
+                Present </h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Navitas</h4>
+                <h4 class="subheading">Professional Year Program</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="timeline-body">Got all kinds of skills related with job seeking and profesional simulation.</p>
+              </div>
+            </div>
+          </li> 
 
+          <li class="timeline-inverted">
+            <div class="timeline-image">
+              <h4>02/2017 <br>
+                - <br>
+                12/2018 </h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>University of Adelaide</h4>
+                <h4 class="subheading">Master of Computing and Innovation</h4>
+              </div>
+              <div class="timeline-body">
+                <p>Learnt how to program and had two team projects in uni.</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-image">
+              <h4>09/2012 <br>
+                - <br>
+                06/2017 </h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Beijing Technology And Business University</h4>
+                <h4 class="subheading">Bachelor of Business Administration</h4>
+              </div>
+              <div class="timeline-body">
+                <p>A business degree which has similar courses with MBI, involving business management.</p>
+              </div>
+            </div>
+          </li>
+        </ul> 
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!---------------- Modal ---------------->
 <div class="modal fade" id="myMentor" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
