--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <div class="container">
     <div class="section-title text-center center">
       <h2>About Me</h2>
+      <hr style="height: 5px; width: 70px; border: 0px solid #7bc3d1; border-top-width: 5px;" />
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
@@ -68,7 +69,7 @@
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
           <p>I am an open-minded, easygoing and resourceful IT graduate, and I am interested in improving myself in developing website or software. I would like to use my communication, problem solving and teamwork skills to benefit organizations. </p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p class="text-center"><a href="resume.pdf" class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
       </div>
     </div>
@@ -80,6 +81,7 @@
   <div class="container">
     <div class="section-title text-center center">
       <h2>Portfolio</h2>
+      <hr style="height: 5px; width: 70px; border: 0px solid #7bc3d1; border-top-width: 5px;" />
     </div>
     <div class="row">
       <div class="portfolio-items">
@@ -107,10 +109,12 @@
       </div>
       <div class="col-sm-6 col-md-3 col-lg-4">
         <div class="portfolio-item">
-          <div class="hover-text">
-            <h4>Competitive coevolutionary code-smells detection</h4>
-            <small>Essay</small> 
-          </div>
+          <a href="essay.pdf" download="essay">
+            <div class="hover-text">
+              <h4>Competitive coevolutionary code-smells detection</h4>
+              <small>Essay</small> 
+            </div>
+          </a>
           <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title">
         </div>
       </div>
@@ -123,6 +127,7 @@
   <div class="container">
     <div class="section-title center">
       <h2>Education</h2>
+      <hr style="height: 5px; width: 70px; border: 0px solid #7bc3d1; border-top-width: 5px;" />
     </div> 
     <div class="row">
       <div class="col-lg-12">
@@ -239,6 +244,7 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal -->
 </div>
+
 
 </body>
 </html>
