--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <div class="row">
         <div class="intro-text">
           <h1>Hello, I'm <span class="name">Vanessa Liu</span></h1>
-          <p>IT graduate</p>
-          <!-- Todo:add page-scroll -->
-          <a class="page-scroll" href="#about" class="btn btn-default btn-lg">Learn More</a></div>
+          <p>IT graduate</p>  
+          <button><a class="page-scroll" href="#about" class="btn"><strong>Learn More</strong></a></button>
+        </div>
       </div>
     </div>
   </div>
