--- a/index.html
+++ b/index.html
@@ -188,6 +188,52 @@
   </div>
 </div>
 
+<!---------------- Contact ---------------->
+<div id="contact" class="text-center">
+  <div class="container">
+    <div class="section-title center">
+      <h2>Contact</h2>
+      <hr style="height: 5px; width: 70px; border: 0px solid #7bc3d1; border-top-width: 5px;">
+    </div>
+
+    <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-6" class="center"> <i class="fa fa-map-marker fa-2x"></i>
+        <p>Dulwich 5065<br>
+          Adelaide, Australia</p>
+      </div>
+      <div class="col-md-6"> <i class="fa fa-envelope-o fa-2x"></i>
+        <p>liujingdie@163.com</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="col-md-8 col-md-offset-2">
+      <h3>Leave me a message</h3>
+      <form name="sentMessage" id="contactForm" novalidate action="https://formspree.io/liujingdie@163.com" method="POST">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" id="name" class="form-control" placeholder="Name" required="required" name="name">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="email" id="email" name="_replyto" class="form-control" placeholder="Email" required="required">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+          <p class="help-block text-danger"></p>
+        </div>
+        <div id="success"></div>
+        <button type="submit" value="Send" class="btn btn-default">Send Message</button>
+      </form>
+    </div>
+  </div>
+</div>
 
 
 <!---------------- Modal ---------------->
