add a picture in modal 1, adjust the template

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-4">
           <div class="portfolio-item">
-            <a style="cursor:pointer" onclick="document.getElementById('id01').style.display='block'" data-toggle="modal" data-target="#myMentor">
+            <a style="cursor:pointer" data-toggle="modal" data-target="#myMentor">
               <div class="hover-text">
                 <h4>My Mentor</h4>
                 <small>Web Appllication</small> </div>
@@ -98,7 +98,7 @@
       </div>
       <div class="col-sm-6 col-md-3 col-lg-4">
         <div class="portfolio-item">
-          <a style="cursor:pointer" onclick="document.getElementById('id01').style.display='block'" data-toggle="modal" data-target="#rescueRobot">
+          <a style="cursor:pointer" data-toggle="modal" data-target="#rescueRobot">
             <div class="hover-text">
               <h4>Rescure Robot</h4>
               <small>App Development</small> 
@@ -109,7 +109,7 @@
       </div>
       <div class="col-sm-6 col-md-3 col-lg-4">
         <div class="portfolio-item">
-          <a style="cursor:pointer" onclick="document.getElementById('id01').style.display='block'" data-toggle="modal" data-target="#cccd">
+          <a style="cursor:pointer" data-toggle="modal" data-target="#cccd">
             <div class="hover-text">
               <h4>Competitive Coevolutionary Code-smells Detection</h4>
               <small>Essay</small> 
@@ -249,6 +249,7 @@
         </h3>
       </div>
       <div class="modal-body">
+        <img src="img/process.png" class="img-responsive" >
         It is a system that allows the registered students to log in, check their current and previous courses, find, become and rate mentors. In this project, I created all the code including:
         <ul>
           <li>A database with five tables by <strong>SQLite</strong></li>
