--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
         </div>
         <div id="success"></div>
         <button type="submit" value="Send" class="btn btn-default">Send Message</button>
+        <div class="social">
+        <ul>
+          <li><a href="https://github.com/VanessaLiu-coder?tab=repositories"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/jingdie-vanessa-liu-537713186/"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+      </div>
       </form>
     </div>
   </div>
