add pic in modal

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h4 class="subheading">Professional Year Program</h4>
               </div>
               <div class="timeline-body">
-                <p class="timeline-body">Got all kinds of skills related with job seeking and profesional simulation.</p>
+                <p class="timeline-body">Got all kinds of skills related with job seeking and professional simulation.</p>
               </div>
             </div>
           </li> 
@@ -255,13 +255,20 @@
         </h3>
       </div>
       <div class="modal-body">
-        <img src="img/process.png" class="img-responsive" >
+        <div class="pic-in-modal">
+            <img src="img/process.png" class="img-responsive" >
+            <p align="right">Diagram 1: The operational function of the application</p>
+        </div>
         It is a system that allows the registered students to log in, check their current and previous courses, find, become and rate mentors. In this project, I created all the code including:
         <ul>
           <li>A database with five tables by <strong>SQLite</strong></li>
           <li>A website based on MVC model in <strong>Ruby on Rails</strong></li>
           <li>The front-end used <strong>HTML</strong>, <strong>CSS </strong>and <strong>Bootstrap</strong></li>
         </ul>
+        <div class="pic-in-modal"> 
+          <img src="img/database structure.png" class="img-responsive" >
+          <p align="right">Diagram 2: ERD in this application</p>
+        </div> 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close
